[3065111] Add/Edit now displays both the Application's (PasswordSafe) and the
current database's default Autotype string (if set via Manage->Options).
[2964804] The user can specify the list of symbols valid for a database and can
override this for any particular entry. Note: the inbuilt special symbols
for EasyVision and Pronounceable passwords can not be overriden in either case.

Changes to Existing Features in 3.25.1
======================================
[] Polish installation texts added thanks to Michal Niklas.
[] An entry's password exipry date is set or cleared directly rather than using
the Set and Clear buttons after changing values.
[] The default password generation policy is now for 12 character
passwords that include symbol characters (previous default was 8, no
symbols).

Bugs fixed in 3.25.1
====================
[3234204] PasswordSafe no longer ends if the command flag is set to "-s <databasename>".
[] Controls in Edit are now disabled if entry is protected, even though the user could
not have saved any changes.

New Features for 3.25
=====================
[] Dutch installation instructions thank to Kees, and a first
(incomplete) Dutch translation of the application thank to Bert, Kees
and Fred.
[] Korean texts in the application and installer program thanks to
Seunggyun.
[] Poserpro has provided Traditional Chinese texts for the installer
program.
[] New View menu option: Show entries with Expiry. This is useful for
displaying entries with passwords that are expired or about to expire.

Changes to Existing Features in 3.25
====================================
[3171962] The password expiration warning mechanism now checks for
expiration daily. The display of expired and almost-expired entries
has been redesigned, allowing users to update the entry directly. When
an expired password is changed, the expiry date will be cleared unless
there is a recurring password expiry interval, in which case a new
expiry date will be calculated.